--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,5 +22,7 @@ services:
       WORDPRESS_DB_USER: wordpress_user
       WORDPRESS_DB_PASSWORD: wordpress_password
       WORDPRESS_DB_NAME: wordpress_db
-#    volumes:
-#      - ".:/var/www/html/wp-content/plugins/sportspress-venue-plugin"
+    volumes:
+      - ".:/var/www/html/wp-content/plugins/sportspress-venue-plugin"
+      - "./uploads.ini:/usr/local/etc/php/conf.d/uploads.ini"
+
